<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_transform_publisher</name>
  <version>1.0.0</version>
  <description>ROS2 package for creating interactive markers and their associated transformations frames.</description>
  <author email="alberto.cruz@upm.es">Alberto Cruz</author>
  <maintainer email="alberto.cruz@upm.es">Alberto Cruz</maintainer>
  <license>GNU General Public License v3.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>interactive_transform_publisher_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
