<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_transform_publisher_msgs</name>
  <version>1.0.0</version>
  <description>Package of interactive_transform_publisher messages</description>
  <author email="alberto.cruz@upm.es">Alberto Cruz</author>
  <maintainer email="alberto.cruz@upm.es">Alberto Cruz</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
